[PUX-1245] add euro currency payment creation (#66)
* add eur currency

* fix unused var

* tests
